2005-11-14  Joe English  <jenglish@users.sourceforge.net>
	* library/bgerror.tcl: Truncate error messages at 45 characters
	instead of 30 [#1224235].

2005-11-14  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkSelect.c (TkSelDefaultSelection): Test select-9.5
	highlighted further brokenness in this function.

2005-11-13  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* unix/tkUnixSelect.c (SelCvtToX): Arrange for the parsing code to
	use Tcl's list parsing code, another simplification that enables
	testing of the [Bug 1353414] fix.

	* unix/tkUnixSelect.c (SelCvtFromX): Generate string forms of the
	advanced selection types in a Tcl_DString. This makes fixing [Bug
	1353414] trivial, and simplifies the code at the same time.
	* tests/select.test (select-9.5): Added test for [Bug 1353414]

2005-11-10  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkBind.c (ChangeScreen):		More DString fixes from
	* generic/tkTextWind.c (EmbWinLayoutProc):	[Bug 1353022]
	* win/tkWinMenu.c (SetDefaults):

	* win/tkWinDialog.c (ConvertExternalFilename): Factored out the
	encoding conversion and de-backslash-ing code that is used in many
	places in this file.
	(GetFileNameW, GetFileNameA, ChooseDirectoryValidateProc): Make sure
	that data is freed correctly and that certain (hopefully impossible)
	failure modes won't cause crashes. [Bug 1353022]

2005-11-06  Pat Thoyts  <pat@zsplat.freeserve.co.uk>

	* unix/tcl.m4:    Fix SHLIB_LD_LIBS for building tclkit on OpenBSD.
	* unix/configure: regenerated

2005-10-31  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.c
	* tests/textDisp.test: fix and test for [Bug 1333951] in
	'.text count -displaylines'.

2005-10-18  Don Porter	<dgp@users.sourceforge.net>

	* generic/tkMain.c:	Rewrote code that sets the ::argv value
	to be sure conversion from the system encoding is complete before
	any processing sensitive to list-special characters is done.
	[Bug 1328926].
